--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/slider": "4.2.4",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "expo": "~47.0.6",
+    "expo-av": "~13.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-video-player": "^2.2.0",
     "react": "18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.4.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1",
+    "react-native-video-player": "^0.14.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
