--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.2",
     "@react-navigation/stack": "^6.3.4",
+    "axios": "^1.2.1",
     "expo": "~47.0.6",
     "expo-av": "~13.0.1",
     "expo-blur": "^12.0.1",
