--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-video-player": "^2.2.0",
     "react": "18.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.4.1",
